--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,15 @@
 [versions]
-agp = "8.9.2"
+agp = "8.9.3"
 glide = "4.16.0"
 glideTransformations = "4.3.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-appcompat = "1.7.0"
+appcompat = "1.7.1"
 material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
+media = "1.7.0"
 media3Exoplayer = "1.7.1"
 palette = "1.0.0"
 waveformseekbar = "1.1"
@@ -24,8 +25,10 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+media = { module = "androidx.media:media", version.ref = "media" }
 media3-common = { module = "androidx.media3:media3-common", version.ref = "media3Exoplayer" }
 media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
+media3-session = { module = "androidx.media3:media3-session", version.ref = "media3Exoplayer" }
 media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 palette = { module = "androidx.palette:palette", version.ref = "palette" }
 waveformseekbar = { module = "com.github.alexei-frolo:WaveformSeekBar", version.ref = "waveformseekbar" }
